# smarc2

./: README.md
color_detector/: package.xml  setup.cfg  setup.py
color_detector/color_detector/: KNN.py  color_detector.py  distpub.py  georeferencer.py  model_ekf.py  particle_filter.py  pf.py
examples/test_package/: setup.py
examples/test_package/test_package/: IThrustView.py  SAMThrustView.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/basic_depth_pitch_control/lib/basic_depth_pitch_control/: action_client_node  action_server_node  diving  test_view
install/basic_depth_pitch_control/share/basic_depth_pitch_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/basic_go_to_waypoint/lib/basic_go_to_waypoint/: action_client_node  action_server_node  view_test  waypoint_following
install/basic_go_to_waypoint/share/basic_go_to_waypoint/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dead_reckoning_msgs/share/dead_reckoning_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dive_control/lib/dive_control/: action_client_node  action_server_diving  action_server_node  manual_diving  setpoint  test_view
install/dive_control/share/dive_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dubins_planner/lib/dubins_planner/: dubins_planner_service  test_dubins_planner_service
install/dubins_planner/share/dubins_planner/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mqtt_bridge/lib/mqtt_bridge/: mqtt_bridge_node
install/mqtt_bridge/share/mqtt_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quadrotor_basic_controller/lib/quadrotor_basic_controller/: controller  test
install/quadrotor_basic_controller/share/quadrotor_basic_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_python_examples/lib/ros2_python_examples/: example_node
install/ros2_python_examples/share/ros2_python_examples/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_tcp_endpoint/share/ros_tcp_endpoint/: package.sh
install/sam_basic_controllers/lib/sam_basic_controllers/: pid_actuator_trim
install/sam_basic_controllers/share/sam_basic_controllers/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sam_dead_reckoning/lib/sam_dead_reckoning/: compass_heading_node  depth_node  dr_lat_lon_node  dr_node  gps_node  rpy_node
log/: latest_build
messages/: README.md
messages/drone_msgs/: CMakeLists.txt  package.xml
messages/drone_msgs/msg/: Topics.msg
quadrotor/quadrotor_basic_controller/: setup.cfg  setup.py
quadrotor/quadrotor_basic_controller/quadrotor_basic_controller/: controller_node.py
simulation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simulation/log/: latest_build
state_estimation/: README.md  package.xml  setup.py
state_estimation/launch/: detector_only.launch
state_estimation/state_estimation/: KNN.py  estimator.py
(+780 files in other folders)
