<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrotor_basic_controller</name>
  <version>0.0.0</version>
  <description>Taeyoung Lee's quadrotor controller for the ALARS drone</description>
  <maintainer email="jglane@purdue.edu">Jonathan Lane</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
